# zombie

./: .gitignore  CMakeLists.txt  README.md  READMELY.md  convert.py  solution.csv
build_test/: 2d_output_2048bvc.csv  2d_output_6144rws.csv  2d_output_nwalks=128wost.csv  Makefile  ly.csv  mse_loss.ipynb
demo/: CMakeLists.txt  colormap.h  command.sh  demo.cpp  grid.h
demo/model_problems/: check.py  compare.sh  compare_csv.sh  convert.sh  create_d.py  create_null_pfm.py  curve.py  curve_mean.py  diff.json  diff1.json  diff_csv.json  diff_csv.py  diff_csv_0.01.json  generate_config_mvc.py  generate_config_mvc_r.py  generate_config_mvc_w.py  generate_config_mvc_w_r.py  generate_config_ours.py  generate_config_wost.py  image_diff.py  output_combined.pfm  output_half_size.pfm  pfm2image.py  resize.py  run_all.sh  view.py  vis_dif.py  visualize.py
demo/model_problems/engine/: bvc.json  meanvalue.json  meanvalue_1.json  meanvalue_1024.json  meanvalue_128.json  meanvalue_16.json  meanvalue_2.json  meanvalue_2048.json  meanvalue_256.json  meanvalue_32.json  meanvalue_4.json  meanvalue_512.json  meanvalue_64.json  meanvalue_8.json  meanvalue_r_1.json  meanvalue_r_1024.json  meanvalue_r_128.json  meanvalue_r_16.json  meanvalue_r_2.json  meanvalue_r_2048.json  meanvalue_r_256.json  meanvalue_r_32.json  meanvalue_r_4.json  meanvalue_r_512.json  meanvalue_r_64.json  meanvalue_r_8.json  meanvalue_w_1.json  meanvalue_w_1024.json  meanvalue_w_128.json  meanvalue_w_16.json  meanvalue_w_2.json  meanvalue_w_2048.json  meanvalue_w_256.json  meanvalue_w_32.json  meanvalue_w_4.json  meanvalue_w_512.json  (+42 more)
demo_3d/: 3d.h  CMakeLists.txt  cmd.sh  cmd_3d.sh  demo_3d.cpp  grid.h  luyan_report.md  model_problem_3d.h
demo_3d/model_problems/engine/: bvc.json  generate_config_wost.py  rws.json  wost.json  wost_emp.json  wost_star.json
demo_3d/model_problems/engine/solutions/: wost.pfm  wost_color.pfm
include/zombie/: zombie.h
(+222 files in other folders)
